# copal

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench.c
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  copalConfig.cmake
cmake/: CompilerWarnings.cmake  copal.pc.in  copalConfig.cmake.in
docs/: API.md  ARCHITECTURE.md  CODESTYLE.md  PERFORMANCE.md  README.md  STRUCTURE.md  api.md  architecture.md  building.md  code-style.md  extending.md  performance.md  widgets.md
docs/ru/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODESTYLE.md  PERFORMANCE.md  README.md  STRUCTURE.md
examples/: CMakeLists.txt  hello_gui.c
examples/calc/: CMakeLists.txt  calc_engine.c  calc_engine.h  calc_widgets.c  calc_widgets.h  main.c
examples/common/: example_util.c  example_util.h
examples/helloworld/: CMakeLists.txt  main.c
examples/test_version/: CMakeLists.txt  main.c
include/copal/: allocator.h  animation.h  application.h  copal.h  error.h  event.h  export.h  font.h  image.h  layout.h  render.h  theme.h  timer.h  types.h  version.h  widget.h  widget_impl.h  window.h
include/copal/backend/: platform.h  renderer.h
include/copal/platform/: fb.h
include/copal/widgets/: button.h  checkbox.h  combobox.h  imageview.h  label.h  list.h  menu.h  menubar.h  messagebox.h  panel.h  progressbar.h  radiobutton.h  radiogroup.h  scrollview.h  slider.h  spacer.h  textbox.h
scripts/: check-freestanding-symbols.sh
src/app/: animation.c  app_internal.h  application.c  timer.c  window.c
src/core/foundation/: abi.c  allocator.c  cstr.c  error.c  fmath.c  fmath.h  format.c  foundation_internal.h  mutex.c  mutex_internal.h  utf8.c  version.c
src/layout/: hbox.c  scrollview.c  vbox.c
src/platform/: platform.h
src/platform/fb/: platform_fb.c
src/platform/mock/: platform_mock.c  platform_mock.h
src/platform/sdl/: platform_sdl.c  platform_sdl.h
src/render/: image.c  image_internal.h  paint_context.c  paint_context.h  renderer.h
src/render/gl/: gl_loader.c  gl_loader.h  renderer_gl.c  renderer_gl.h
src/render/mock/: renderer_mock.c  renderer_mock.h
src/render/soft/: renderer_soft.c  renderer_soft.h
src/text/: font.c  font_internal.h  stb_impl.c
src/theme/: theme.c  theme_internal.h
src/widget/: widget.c  widget_host.h  widget_internal.h
src/widgets/: button.c  checkbox.c  combobox.c  imageview.c  label.c  list.c  menu.c  menubar.c  messagebox.c  panel.c  progressbar.c  radiobutton.c  radiogroup.c  slider.c  spacer.c  textbox.c  tooltip.c  tooltip_internal.h
tests/: CMakeLists.txt  test_abi.c  test_animation.c  test_combobox.c  test_damage.c  test_fb.c  test_fmath.c  test_format.c  test_foundation.c  test_fuzz.c  test_gl_golden.c  test_gui.c  test_image.c  test_ime.c  test_layout.c  test_lifecycle.c  test_multiline.c  test_oom.c  test_overlay.c  test_popup.c  test_post.c  test_recursion.c  test_scrollview.c  test_soft.c  test_textbox.c  test_theme.c  test_timer.c  test_tooltip.c  test_widgets.c
tools/: lsan.supp  setup-hooks.sh
